# postcard-creator-wrapper

./: .gitignore  Dockerfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python.yaml
src/postcard_creator/: __init__.py  _auth.py  _creator.py  _error.py  _img_util.py  _postcard.py  _swissid.py  _token.py  _types.py  postcard_creator.py  postcard_creator_legacy.py  postcard_creator_swissid.py  postcard_img_util.py  token.py
src/postcard_creator_server/: __init__.py  _token.py
tests/: test_token.py
