[project]
name = "postcard-creator"
version = "0.1.0"
description = "A python wrapper around the Rest API of the Swiss Postcard creator"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Andrin Bertschi", email = "apps@abertschi.ch" },
    { name = "Simon Berger", email = "simon.berger@inomotech.com" },
]
keywords = ["postcard", "creator", "swiss"]
classifiers = ["Intended Audience :: Developers"]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorthief>=0.2.1",
    "pillow>=11.2.1",
    "python-resize-image>=1.1.20",
    "requests>=2.32.3",
    "urllib3>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "requests-mock>=1.12.1", "ruff>=0.11.10", "ty>=0.0.1a3"]
server = ["fastapi[standard]>=0.115.12"]

[tool.ruff.lint]
extend-select = ["I"]
